<resources>
    <string name="app_name">Admin Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Email</string>
    <string name="e_mail">Last Name</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Submit</string>
    <string name="re_type_password">License Number</string>
    <string name="your_name">Frist Name</string>
    <string name="your_number">Mobile Number</string>
    <string name="doctor">Doctor</string>
    <string name="register_page">Submit Doctor Details</string>
    <string name="viewAll">All</string>

</resources>